--- a/packages/move/package.json
+++ b/packages/move/package.json
@@ -2,18 +2,20 @@
   "name": "@scaffold-move/move",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "account": "ts-node scripts/init-account.ts",
-    "chain": "aptos node run-local-testnet",
-    "deploy": "ts-node scripts/deploy.ts && ts-node scripts/load-modules.ts",
-    "bomdia": "ts-node /home/arjan/git/canopy/canopy-multisig-cli/scripts/helpers/simulate-transaction.ts",
-    "compile": "aptos move compile",
-    "test": "aptos move test",
-    "format": "aptos move fmt",
-    "document": "aptos move document",
-    "build": "tsc"
+    "client": "iota client new-env",
+    "view-clients": "iota client envs",
+    "switch-client": "node utils/switch-client.js",
+    "account": "ts-node utils/init-account.ts",
+    "chain": "RUST_LOG=\"off,iota_node=info\" iota start --force-regenesis --with-faucet",
+    "deploy": " ts-node utils/deploy.ts publish && ts-node utils/load-modules.ts",
+    "compile": "iota move build",
+    "test": "iota move test",
+    "format": "iota move fmt",
+    "document": "iota move document"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.38.0",
+    "@iota/iota-sdk": "^0.6.0",
     "axios": "^1.8.4",
     "got": "11.8.6",
     "js-yaml": "^4.1.0",
