wallet implementation working

--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scaffold Move DApp",
-  "description": "A DApp built with Scaffold Move",
+  "name": "Scaffold IOTA DApp",
+  "description": "A DApp built with Scaffold IOTA",
   "iconPath": "logo.png"
 }
