--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,11 +17,15 @@
     "@apollo/client": "^3.12.4",
     "@aptos-labs/wallet-adapter-react": "^4.1.2",
     "@heroicons/react": "^2.1.5",
+    "@iota/dapp-kit": "^0.4.1",
+    "@iota/iota-sdk": "^0.6.0",
     "@mizuwallet-sdk/core": "^1.4.0",
+    "@radix-ui/themes": "^3.2.1",
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "^5.56.2",
     "@telegram-apps/bridge": "^1.9.0",
     "aptos": "^1.21.0",
+    "bignumber.js": "^9.3.0",
     "blo": "^1.2.0",
     "daisyui": "4.12.10",
     "got": "^14.4.7",
