--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-move/nextjs",
+  "name": "@scaffold-iota/nextjs",
   "private": true,
   "version": "0.1.0",
   "scripts": {
