--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-iota/nextjs",
+  "name": "@scaffold-sui/nextjs",
   "private": true,
   "version": "0.1.0",
   "scripts": {
@@ -15,11 +15,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
-    "@aptos-labs/wallet-adapter-react": "^4.1.2",
     "@growthbook/growthbook-react": "^1.4.1",
     "@heroicons/react": "^2.1.5",
-    "@iota/dapp-kit": "^0.4.1",
-    "@iota/iota-sdk": "^0.6.0",
+    "@mysten/dapp-kit": "^0.4.1",
+    "@mysten/sui": "^0.6.0",
     "@mizuwallet-sdk/core": "^1.4.0",
     "@radix-ui/themes": "^3.2.1",
     "@rainbow-me/rainbowkit": "2.1.6",
