--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scaffold IOTA DApp",
-  "description": "A DApp built with Scaffold IOTA",
+  "name": "Scaffold Sui DApp",
+  "description": "A DApp built with Scaffold Sui",
   "iconPath": "logo.png"
 }
